<resources>
    <string name="app_name">Lat1_AKB2_10116072_ZhafirahSakinahBaity</string>
    <string name="welcome">Monitory Membantu Anak \n Mengontrol HP Anak </string>
    <string name="kodekeluarga">Kode Keluarga</string>
    <string name="ketikkan">Ketikkan kode keluarga yang Ayah Bunda \nmiliki disini</string>
    <string name="denganmenekan">Dengan menekan tombol masuk berarti Anda menyetujui\n <b>Ketentuan Pengguna</b>  dan <b>Kebijakan Data kami</b>b></string>
    <string name="textview">TextView</string>
    <string name="Belumpunya">Belum punya kode keluarga?</string>
    <string name="nama">Nama Panggilan Kamu </string>
    <string name="budi">Contoh : Budi</string>
    <string name="Umur">Umur Kamu</string>
    <string name="contohumur">Contoh : 12</string>
    <string name="Beres">Beres! Sekarang %1$s udah bisa ngecek penggunaan HP mu tiap hari buat bantu kamu ngatur waktu :) </string>
</resources>
